Tried to fix Details sections vertical spacing

--- a/distill.css
+++ b/distill.css
@@ -109,17 +109,13 @@ details > summary {
 }
 
 details > p:first-of-type {
-  margin-top: -40px;
-  padding: 10px 15px;
-}
-
-details > p {
-  padding: 10px 15px;
+  margin-top: -20px;
 }
 
 details {
   color: #707070;
-  margin-left: 20px;
+  margin-left: 10px;
+  padding: 10px 15px;
   /*background-color: #f0f8ff;
   border-left-width: 5px;
   border-left-style: solid;
